--- a/composer.json
+++ b/composer.json
@@ -51,5 +51,8 @@
     "preferred-install": {
       "*": "dist"
     }
+  },
+  "scripts": {
+    "server.start": "php -S localhost:8080 -t public public/index.php &"
   }
 }
