--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "symfony/console": "^5.1",
     "symfony/dotenv": "^5.1",
     "symfony/yaml": "^5.1",
-    "twig/twig": "^v3.0"
+    "twig/twig": "^v3.0",
+    "ext-xml": "*"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.0.x-dev",
@@ -53,6 +54,6 @@
     }
   },
   "scripts": {
-    "server.start": "php -S localhost:8080 -t public public/index.php &"
+    "server.start": "php -S localhost:8080 -t public public/index.php"
   }
 }
