--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
     "symfony/dotenv": "^5.1",
     "symfony/yaml": "^5.1",
     "twig/twig": "^v3.0",
-    "ext-xml": "*"
+    "ext-xml": "*",
+    "ext-libxml": "*",
+    "ext-xmlreader": "*"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.0.x-dev",
